public/css/app.css
html, body {
	height: 100%;
}

/*Remove After Halloween*/
body {
	background-color: #000;
	background-image: url("/images/halloween.jpg");
	-webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.moon {
  display: block;
  position: absolute;
  right: 2em;
  top: 2em;
  height: 200px;
  width: 200px;
  border-radius: 100%;
  background: #ddd;
  box-shadow: 0 0 50px gold,0 0 150px gold, inset 0 20px 20px 40px whitesmoke, inset 30px 0 35px 50px ivory;
  transition: 2s;
  z-index: -1;
}
/*Remove After Halloween*/

.panel {
	opacity: 0.9;
}

#side-menu {
	margin-top: 1em;
}

/*Chat*/

.wordwrap { 
	white-space: pre-wrap;      /* CSS3 */   
	white-space: -moz-pre-wrap; /* Firefox */    
	white-space: -pre-wrap;     /* Opera <7 */   
	white-space: -o-pre-wrap;   /* Opera 7 */    
	word-wrap: break-word;      /* IE */
}

#chatroom {
	margin-top: 1em;
}

#chatmessage-container {
}

#chatmessages {
	height: 480px;
	overflow-y: scroll;
	padding-right: 20px;
}

.signin {
	margin: 0px 10px;
}

.admin-panel {
	margin: 10px 10px;
}

.imgur-container {
	text-align: center;
	margin: 5px 0;
}

.imgur-chat {
	max-height: 280px;
	max-width: 80%;
}

/*Splash Page*/

.join-hero {
	padding: 80px 0px;
}

.jumbo-auth {
	margin-top: 30px;
}

.jumbo-img {
	max-height: 150px;
}

.spinner {
	max-height: 30px !important;
}

/*Gather Styles*/

.vote-button {
	min-width: 60px;
}

.team-label {
	min-width: 70px;
	display: inline-block;
}

.label-padding {
	padding: 5px 0;
}

.lifeform-icon {
	width: 20px;
	margin: 0 3px;
}

.gather-voting {
	font-size: 90%;
}

.progress-bar {
	min-width: 6em;
}

#gatherers-panel > .panel {
	margin-bottom: 1px;
}

.gather-actions {
	margin-top: 0.5em;
}

#gathers {
	margin-top: 1em;
}

.gatherer {
	margin-bottom: 5px;
	padding: 0px;
}

.gatherer-panel {
	box-shadow: none;
}

.panel-alien {
    border-color: #186845;
}
.panel-alien>.panel-heading {
    color: #B7DCCC;
    background-color: #569F80;
    border-color: #186845;
}
.panel-alien>.panel-heading+.panel-collapse .panel-body {
    border-top-color: #186845;
}
.panel-alien>.panel-footer+.panel-collapse .panel-body {
    border-bottom-color: #186845;
}
.label-alien {
	color: #B7DCCC;
  background-color: #186845;
}

.panel-marine {
    border-color: #1B4362;
}
.panel-marine>.panel-heading {
    color: #B6C9D7;
    background-color: #557995;
    border-color: #1B4362;
}
.panel-marine>.panel-heading+.panel-collapse .panel-body {
    border-top-color: #1B4362;
}
.panel-marine>.panel-footer+.panel-collapse .panel-body {
    border-bottom-color: #1B4362;
}
.label-marine {
	color: #B7C6D8;
  background-color: #1B4362;
}

/*Utility Styles*/

.add-left {
	margin-left: 0.5em;
}

.add-right {
	margin-right: 0.5em;
}

.max-width {
	width: 100%;
}

.add-top {
	margin-top: 0.5em;
}

.add-bottom {
	margin-bottom: 0.5em;
}

.no-bottom {
	margin-bottom: 0px !important;
	padding-bottom: 0px !important;
}

.headline {
	padding-bottom: 0.5em;
	border-bottom: 1px solid #CFCFCF;
	margin-bottom: 20px;
}

.pointer {
	cursor: pointer;
}

.panel-light-background {
	background-color: #d9edf7;
}

/* Sound */

.volume-slide {
	padding: 0 15px;
}

.music-select {
	padding: 0 15px;
}

